# aiga-connect

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  NGROK_GUIDE.md  README.md  docker-compose.yml  package-lock.json  package.json  start-ngrok-simple.sh  start-ngrok.sh  update-frontend-config.js
backend/: .env.example  add_data.py  add_missing_data.py  add_test_feedback.py  alembic.ini  clear_and_seed.py  pyproject.toml  requirements.txt  run_seed.py  seed_data.py  seed_merchandise.py  start.sh
backend/app/: config.py  database.py  deps.py  main.py  models.py
backend/app/bookings/: crud.py  models.py  router.py  schemas.py
backend/app/chat/: crud.py  models.py  router.py  schemas.py  websocket.py
backend/app/classes/: crud.py  models.py  router.py  schemas.py
backend/app/common/: enums.py
backend/app/core/: security.py
backend/app/feedback/: crud.py  models.py  router.py  schemas.py
backend/app/forum/: crud.py  models.py  router.py  schemas.py
backend/app/merchandise/: crud.py  models.py  router.py  schemas.py
backend/app/notifications/: crud.py  models.py  router.py  schemas.py
backend/app/progress/: __init__.py  crud.py  models.py  router.py  schemas.py
backend/app/users/: crud.py  models.py  router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0326c37e0354_make_email_full_name_birth_date_role_.py  18876b64a2e0_fix_chat_model_relationships.py  2181981c1ec9_update_booking_model_nullable_parent.py  24a2b287aea4_add_chat_and_forum_tables.py  4688796825c1_merge_heads.py  53b2be21b088_add_missing_tables.py  (+19 more)
(+60 files in other folders)
